--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root{
-    --color-primary:#EFAF64;
+    --color-primary:#9C2004;
     --color-secundary:#333333;
     --color-ternary:#FFFFFF;
     --color-botton: #FE6E06;
